# FlightApp

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-deploy.yml
requirements/: dev.txt  prod.txt
src/api/: main.py
src/api/routes/: flight.py  request.py
src/db/: database.py  schemas.py
tests/: conftest.py
tests/api/: conftest.py  test_flight.py  test_request.py
